willChange: transform to remove buggy animation on safari?

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -116,6 +116,7 @@
   margin: 0 auto;
   width: 100%;
   filter: drop-shadow(8px 8px 0px rgba(0, 0, 0, 0.25));
+  will-change: transform;
   max-width: 1216px;
 }
 
